--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
 </head>
 <body>
     <button id="addMovie">+</button>
+    <div id="display"></div>  <!-- Added this to show movie list -->
 </body>
 <script src="movielogic.js"></script>
 </html>
