--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Movie List App</title>
-    <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="moviestyle.css">
 </head>
 <body>
     <div class="container">
@@ -15,6 +15,6 @@
         <h2>Total Movies: <span id="movieCount">0</span></h2>
         <ul id="movieList"></ul>
     </div>
-    <script src="script.js"></script>
+    <script src="movielogic.js"></script>
 </body>
 </html>
